--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: John P. Neumann
 
 # Short bio or description (displayed in the header)
-description: Creator of things.
+description: Writer of Code; Creator of Stuff... Sometimes Things.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars3.githubusercontent.com/u/387735?v=3&s=460
